Fix Home page display on mobile

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -22,7 +22,7 @@
 }
 
 .home {
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,6 +31,7 @@
   padding: 1rem;
   scroll-snap-align: center;
   @include tablet {
+    height: 100vh;
     padding: 2rem;
     overflow: hidden;
     white-space: nowrap;
@@ -41,11 +42,12 @@
     font-size: 2rem;
     letter-spacing: 1rem;
     font-weight: 100;
-    padding-bottom: 3rem;  
+    padding-bottom: 2rem;  
     text-align: center;
     @include desktop {
       letter-spacing: 2rem;
       font-size: 3rem;
+      padding-bottom: 3rem;  
     }
   }
 
