--- a/src/styles/Work.scss
+++ b/src/styles/Work.scss
@@ -104,7 +104,7 @@
     }
 
     &__link {
-      font-size: 0.8rem;
+      font-size: 1rem;
       font-weight: 300;
       line-height: 2rem;
       letter-spacing: 0rem;
